# collaborative_robotics_course

./: .gitignore  README.md
la_msgs/: CMakeLists.txt  package.xml
la_msgs/srv/: Ptps.srv
locobot_autonomy/: CMakeLists.txt  package.xml
locobot_autonomy/action/: MoveBase.action
locobot_autonomy/launch/: simple_move_a_to_b_launch.py  spawn_cube_launch.py
locobot_autonomy/locobot_autonomy/: move_A_to_B_py.py  move_locobot_base_action_server.py  my_node_py.py
locobot_autonomy/model/: blue_cube.urdf  green_cube.urdf  red_cube.urdf  yellow_cube.urdf
locobot_autonomy/src/: my_node.cpp  vis.cpp  visual_block_perception_srv.cpp
locobot_autonomy/srv/: PixtoPoint.srv
me326_locobot_example/: CMakeLists.txt  package.xml  setup.py
me326_locobot_example/launch/: gazebo_moveit_example.launch  launch_locobot_gazebo.sh  launch_locobot_gazebo_moveit.sh  launch_locobot_pointA_to_pointB_example_gazebo.sh  launch_moveit_example_real_robot.sh  locobot_gazebo_example.launch  locobot_gazebo_example.launch.py  locobot_gazebp_example.launch  rviz_example_env.rviz  spawn_cube.launch  xs_many_locobots_gazebo.launch
me326_locobot_example/model/: blue_cube.urdf  green_cube.urdf  red_cube.urdf  yellow_cube.urdf
me326_locobot_example/scripts/: locobot1_example_motion.py  locobot_example_motion.py  locobot_grasp_example.py  locobot_motion_example.py  matching_ptcld.py
me326_locobot_example/src/: matching_ptcld_serv.cpp
me326_locobot_example/srv/: PixtoPoint.srv
