<?xml version="1.0"?>
<package format="2">
  <name>me326_locobot_example</name>
  <version>0.0.0</version>
  <description>The me326_locobot_example package</description>
  <maintainer email="monroek@stanford.edu">monroe</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>interbotix_xslocobot_descriptions</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_common_sim</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_trajectory_controller</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <build_type>ament_cmake</build_type>
  </export>
</package>
