<?xml version="1.0"?>
<package format="2">
  <name>me326_locobot_example</name>
  <version>0.0.0</version>
  <description>The me326_locobot_example package</description>

  <maintainer email="monroek@stanford.edu">monroe</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>opencv2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
 

 
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  
  
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
